# aistackd

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  LICENSE  README.md  docker-compose.yml  download-model.sh  models-metadata.conf  models-metadata.conf.example  models.conf  pyproject.toml  rag-index.sh  rag-search.sh  rag-web.sh  setup-macos.sh  setup-rag.sh  setup.sh  start-openhands.sh  start-rag.sh  start-server.sh  sync-opencode-config.sh  sync-opencode.sh  uninstall.sh
.github/: markdown-link-check.json
.github/workflows/: ci.yml  markdown-lint.yml  shellcheck.yml  test.yml  yaml-lint.yml
agent/: AGENTS.md  debug.md  review.md
docs/: OPENHANDS.md  architecture.md  bootstrap-implementation-plan.md  contributing.md  hf-cache-spec.md  naming-conventions.md  phase-c-exit-report.md  phase-c-hardening-plan.md  phase-d-exit-report.md  phase-d-plan.md  python-client-audit.md  rebuild-salvage-notes.md  resolver-spec.md  roadmap.md  skills-platform-architecture-plan.md  skills-refresh.md
lib/: common.sh
llama-cpp/: .env.example  README.md  download-model.sh  models-metadata.conf  models.conf  setup.sh  start-server.sh  sync-opencode-config.sh  uninstall.sh
ollama/: .env.example  README.md  docker-compose.yml  models-metadata.conf  models-metadata.conf.example  models.conf  setup-macos.sh  setup.sh  sync-opencode-config.sh  sync-opencode.sh  uninstall.sh
opencode/agent/: AGENTS.md  plan.md
opencode/tools/: opencode-tools.yaml  websearch.ts
openhands/: OPENHANDS.md  docker-compose.yml
python_client/: README.md  pyproject.toml
python_client/src/ai_stack/: __main__.py  cli.py  client.py  config.py  huggingface.py  llm.py  setup.py
python_client/src/ai_stack/cli/: __init__.py  download.py  integrations.py  main.py  server.py  server_runtime.py  server_start.py  server_status.py  server_stop.py  setup.py  setup_deps.py  setup_install.py  setup_uninstall.py
python_client/src/ai_stack/core/: __init__.py  config.py  errors.py  exceptions.py  logging.py  retry.py
python_client/src/ai_stack/huggingface/: cache.py  client.py  metadata.py  resolver.py
python_client/src/ai_stack/integrations/: __init__.py
python_client/src/ai_stack/integrations/adapters/: __init__.py
python_client/src/ai_stack/integrations/adapters/opencode/: __init__.py  adapter.py  types.py
python_client/src/ai_stack/integrations/adapters/openhands/: README.md  __init__.py  adapter.py  types.py
python_client/src/ai_stack/integrations/adapters/tools/: __init__.py
python_client/src/ai_stack/integrations/core/: __init__.py  errors.py  registry.py  types.py
python_client/src/ai_stack/integrations/frontends/: __init__.py
python_client/src/ai_stack/integrations/frontends/opencode/: __init__.py  skills_catalog.py  sync.py
python_client/src/ai_stack/integrations/frontends/openhands/: __init__.py  sync.py
python_client/src/ai_stack/integrations/opencode/: __init__.py  adapter.py
python_client/src/ai_stack/integrations/openhands/: README.md  __init__.py
python_client/src/ai_stack/integrations/shared/: __init__.py  types.py
python_client/src/ai_stack/integrations/shared/agents/: __init__.py
python_client/src/ai_stack/integrations/shared/skills/: __init__.py
python_client/src/ai_stack/integrations/shared/tools/: __init__.py
python_client/src/ai_stack/integrations/tools/: __init__.py  adapter.py  types.py
python_client/src/ai_stack/llama/: __init__.py  build.py  client.py  detect_gpu.py  server.py
python_client/src/ai_stack/models/: registry.py
python_client/src/ai_stack/stack/: __init__.py  hf_downloads.py  manager.py
python_client/tests/: test_cache_orchestration.py  test_cache_schema.py  test_cli_download_model_list.py  test_cli_server_lifecycle.py  test_cli_server_start_options.py  test_cli_setup_output.py  test_cli_sync_opencode_config.py  test_cli_sync_openhands_config.py  test_cli_uninstall_scope.py  test_compat_imports.py  test_config_dynamic_runtime_state.py  test_config_gpu_detection.py  test_hf_download_success_path.py  test_hf_repo_input.py  test_integration_boundaries.py  test_integrations_api.py  test_integrations_opencode_adapter.py  test_integrations_opencode_sync.py  test_integrations_openhands_adapter.py  test_integrations_openhands_sync.py  test_integrations_registry.py  test_integrations_shared_skills.py  test_integrations_tools_adapter.py  test_llama_build_failures.py  test_llama_server_failures.py  test_llm_client_base_url.py  test_module_boundaries.py  test_opencode_skills_catalog.py  test_resolver_metadata.py  test_skills_catalog.py
rag/: __init__.py  collections.yml  config.py  embeddings.py  indexer.py  rag_llm.py  rag_query.py  requirements.txt  retriever.py  server.py  web_search.py
rag/searxng/: settings.yml
skills/: README.md
skills/ai-stack-model-operations/: SKILL.md
tests/: test_cli.py  test_client_remote.py  test_control_plane.py  test_control_plane_admin.py  test_control_plane_responses.py  test_host_runtime.py  test_host_state.py  test_layout.py  test_model_acquisition.py  test_model_sources.py  test_profiles_state.py  test_runtime_backend.py  test_runtime_backend_process.py  test_runtime_bootstrap.py  test_runtime_config.py  test_runtime_control_plane_process.py  test_runtime_hardware.py  test_shared_tools.py  test_sync_write.py
tools/: README.md  frontend-smoke.py  model-admin.py  responses-smoke.py  runtime-status.py  runtime-wait.py  tool-call-demo.py
(+80 files in other folders)
