[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aistackd"
version = "0.1.0a0"
description = "Phase 0 scaffold for the aistackd local AI platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.scripts]
aistackd = "aistackd.cli.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
