[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stack"
version = "0.1.0"
description = "AI Stack - Local LLM setup and management"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
setup-stack = "ai_stack.cli:setup_cli"
server-start = "ai_stack.cli:start_server_cli"
server-status = "ai_stack.cli:status_cli"
server-stop = "ai_stack.cli:stop_server_cli"
download-model = "ai_stack.cli:download_model_cli"
check-deps = "ai_stack.cli:check_deps_cli"

[tool.setuptools.packages.find]
where = ["src"]